ECCI-525 ensure feature news card link has a black color and fixed spacing between cards on desktop

--- a/ecc_theme/css/ecc-shared/layout.css
+++ b/ecc_theme/css/ecc-shared/layout.css
@@ -205,7 +205,8 @@
     font-size: calc(var(--spacing) * 1.563);
   }
 
-  .news-card article a {
+  .news-card article a,
+  .featured-news__card article a {
     color: var(--color-black);
   }
 
